third_party/move/move-compiler-v2/tests/checking/variants/variants_check_duplicate_variant_err.move
module 0x815::m {

    enum ColorDuplicateVariant {
        RGB{red: u64, green: u64, blue: u64},
        Red,
        Blue,
        RGB{red: u64, green: u64, blue: u64},
    }
}
